@@ -452,18 +452,10 @@ class ASFSrc(gst.BaseSrc):
         self.set_name(name)
 
         self.queue = queue.AsyncQueue()
-        self.asfparser = None
+        self.asfparser = ASFHTTPParser()
 
-        self.streaming = False
-
-    def setStreaming(self, streaming):
-        self.streaming = streaming
-        if self.streaming:
-            self.queue.clear()
-            self.asfparser = ASFHTTPParser()
-
-    def isStreaming(self):
-        return self.streaming
+    def resetASFParser(self):
+        self.asfparser = ASFHTTPParser()
 
     def do_unlock(self):
         self.queue.unblock()
